[gd_scene load_steps=4 format=3 uid="uid://bmm0uphw32iq7"]

[ext_resource type="PackedScene" uid="uid://cie461xkyn7m7" path="res://ink_canvas.tscn" id="1_2o28d"]
[ext_resource type="Script" uid="uid://bjesq1tslhg8k" path="res://notepage.gd" id="1_yq5pd"]
[ext_resource type="PackedScene" uid="uid://dgcktkvlefs46" path="res://tick_button.tscn" id="2_alm80"]

[node name="Notepage" type="PanelContainer" node_paths=PackedStringArray("ink_canvas")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yq5pd")
ink_canvas = NodePath("MainContainer/InkCanvas")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBarContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleTextEdit" type="TextEdit" parent="MainContainer/TopBarContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
placeholder_text = "Unnamed Notepage"

[node name="OptionContainer" type="HBoxContainer" parent="MainContainer/TopBarContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save and Exit"

[node name="Control2" type="Control" parent="MainContainer/TopBarContainer/OptionContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SaveButton" type="Button" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="ColorPickerLabel" type="Label" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Color: "
horizontal_alignment = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="MainContainer/TopBarContainer/OptionContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="ThicknessLabel" type="Label" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Thickness: "
horizontal_alignment = 2

[node name="ThicknessTickButton" parent="MainContainer/TopBarContainer/OptionContainer" instance=ExtResource("2_alm80")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
value = 5.0
max_value = 50.0
min_value = 1.0

[node name="EraserRadLabel" type="Label" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Eraser Size: "
horizontal_alignment = 2

[node name="EraserRadTickButton" parent="MainContainer/TopBarContainer/OptionContainer" instance=ExtResource("2_alm80")]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
value = 18.0
max_value = 100.0
min_value = 1.0

[node name="UndoButton" type="Button" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Undo"

[node name="Control" type="Control" parent="MainContainer/TopBarContainer/OptionContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="RedoButton" type="Button" parent="MainContainer/TopBarContainer/OptionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Redo"

[node name="ColorRect" type="ColorRect" parent="MainContainer/TopBarContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0.05882353, 0.05882353, 0.05882353, 1)

[node name="DebugLabel" type="Label" parent="MainContainer/TopBarContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Jones BBQ and Foot Massage"
autowrap_mode = 2

[node name="InkCanvas" parent="MainContainer" instance=ExtResource("1_2o28d")]
layout_mode = 2

[connection signal="pressed" from="MainContainer/TopBarContainer/OptionContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MainContainer/TopBarContainer/OptionContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="color_changed" from="MainContainer/TopBarContainer/OptionContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="value_changed" from="MainContainer/TopBarContainer/OptionContainer/ThicknessTickButton" to="." method="_on_thickness_tick_button_value_changed"]
[connection signal="value_changed" from="MainContainer/TopBarContainer/OptionContainer/EraserRadTickButton" to="." method="_on_eraser_rad_tick_button_value_changed"]
[connection signal="pressed" from="MainContainer/TopBarContainer/OptionContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="MainContainer/TopBarContainer/OptionContainer/RedoButton" to="." method="_on_redo_button_pressed"]
